--- a/index.html
+++ b/index.html
@@ -1,122 +1,128 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2KDTRH8GV3"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-2KDTRH8GV3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);} gtag('js', new Date());
+    gtag('config', 'G-2KDTRH8GV3');
+  </script>
 
-  gtag('config', 'G-2KDTRH8GV3');
-</script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Vani D'Oyá - Conexão Espiritual</title>
-  <!-- Fonte mística importada via Google Fonts -->
+
+  <title>Vani D'Oyá – Conexão Espiritual</title>
+  <meta name="description" content="Cursos, rituais e atendimentos espirituais para sua transformação com a Sacerdotisa Vani D'Oyá.">
+  <link rel="canonical" href="https://prontosocorroespiritual.com/">
+
+  <!-- Open Graph / Twitter -->
+  <meta property="og:title"       content="Vani D'Oyá – Conexão Espiritual">
+  <meta property="og:description" content="Transforme‑se com magia da natureza, oráculos e medicinas da floresta.">
+  <meta property="og:image"      content="https://prontosocorroespiritual.com/foto-vanidoya.jpeg">
+  <meta property="og:url"        content="https://prontosocorroespiritual.com/">
+  <meta property="og:type"       content="website">
+
+  <!-- JSON‑LD -->
+  <script type="application/ld+json">{"@context":"https://schema.org","@type":"Person","name":"Vani D'Oyá","url":"https://prontosocorroespiritual.com/","image":"https://prontosocorroespiritual.com/foto-vanidoya.jpeg","jobTitle":"Guia Espiritual","sameAs":["https://instagram.com/sacerdotisa_vanidoya","https://wa.me/5521972280397"]}</script>
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Uncial+Antiqua&display=swap" rel="stylesheet">
-  <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+
+  <!-- CSS externos -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="styles.css">
-
-<script>
-  document.getElementById('https://pset.simplybook.me/v2/#book').addEventListener('click', function(event) {
-    event.preventDefault(); // Impede o comportamento padrão do link
-    const url = this.href + '?t=' + new Date().getTime(); // Adiciona um timestamp à URL
-    window.location.href = url; // Redireciona para a URL modificada
-  });
-</script>
 </head>
-<body><main class="container-fluid">
-    <div class="container text-center py-3">
-    <img src="foto-vanidoya.jpeg" alt="Vani D'Oyá" class="rounded-circle mb-3"
-         style="width: 200px; border: 4px solid #FFDAB9;"><br>
-         <div class="container text-center py-2 glass">
-    <h5 class="brand-color">Sacerdotisa </h5><h1 class="brand-color">Vani D'Oyá</h1>
-    <h6>Guia Espiritual | Conexão e Transformação</h6>
-</div>  
+<body>
+<main class="container-fluid">
+  <div class="container text-center py-3">
+    <img src="foto-vanidoya.jpeg" alt="Vani D'Oyá" class="rounded-circle mb-3" style="width:200px;border:4px solid #FFDAB9;" loading="lazy">
+
+    <div class="container text-center py-2 glass">
+      <h5 class="brand-color">Sacerdotisa</h5>
+      <h1 class="brand-color" id="profile-title">Vani D'Oyá</h1>
+      <h6 id="profile-subtitle">Guia Espiritual | Conexão e Transformação</h6>
+    </div>
+
+    <!-- BOTÕES PRINCIPAIS -->
     <div class="d-flex flex-column align-items-center gap-3 py-3">
-
-<!-- BOTÕES DE AÇÃO -->
-<a href="curso-avancado-baralho-cigano.html"
-    class="btn btn-vanidoya btn-service">Curso Avançado<br>Baralho Cigano</a>
-
-<a href="feitio-escola.html"
-   class="btn btn-vanidoya btn-service">Feitio Escola <br> Aya Curandeira</a>
-
-
-   <a href="https://prontosocorroespiritual.com/cursos/"
-   class="btn btn-vanidoya btn-service">Escola de Magia</a>
-
-   <a href="https://pset.simplybook.me/v2/#book"
-   class="btn btn-vanidoya btn-service">Marque sua visita</a>
-
-  <!-- Modal Compartilhar -->
-  <div class="modal fade" id="shareModal" tabindex="-1">
-    <div class="modal-dialog">
-      <div class="modal-content text-center p-4">
-        <h5 class="modal-title mb-3">Compartilhe este site</h5>
-        <input class="form-control" value="https://prontosocorroespiritual.com/" readonly>
-        <button class="btn btn-vanidoya mt-3" id="link-copy">Copiar Link</button>
-      </div>
+      <a id="btn-tarot"  href="curso-avancado-baralho-cigano.html" class="btn btn-vanidoya btn-service">Curso Avançado<br>Baralho Cigano</a>
+      <a id="btn-feitio" href="feitio-escola.html"                class="btn btn-vanidoya btn-service">Feitio Escola<br>Aya Curandeira</a>
+      <a href="https://prontosocorroespiritual.com/cursos/" class="btn btn-vanidoya btn-service">Escola de Magia</a>
+      <a href="https://pset.simplybook.me/v2/#book" class="btn btn-vanidoya btn-service">Marque sua visita</a>
     </div>
   </div>
+</main>
 
-  <!-- Modal Medicinas da Floresta -->
-  <div class="modal fade" id="forestModal" tabindex="-1">
-    <div class="modal-dialog">
-      <div class="modal-content text-center p-4">
-        <h5 class="modal-title mb-3">Medicinas da Floresta</h5>
-        <p class="text-muted">Essas medicinas são um presente para todos, mas nem todos estão prontos para elas. Descubra se é seu momento!</p>
-        <a href="https://docs.google.com/forms/d/1IMb6Evq2V_CrWg7wYpMwIPyAmJsnxgjtya1p9sT1x4w" class="btn btn-vanidoya">Descubra Agora</a>
-      </div>
-    </div>
+<!-- FOOTER -->
+<footer class="site-footer">
+  <div class="footer-inner">
+    <a class="icon-btn" href="https://wa.me/5521972280397" target="_blank" rel="noopener" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+    <a class="icon-btn" href="https://instagram.com/sacerdotisa_vanidoya" target="_blank" rel="noopener" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+    <button id="share-btn"  class="icon-btn" type="button" aria-label="Compartilhar"><i class="fas fa-share-alt"></i></button>
+    <button id="forest-btn" class="icon-btn" type="button" data-bs-toggle="modal" data-bs-target="#forestModal"  aria-label="Medicinas da Floresta"><i class="fas fa-leaf"></i></button>
+    <button id="pay-btn"    class="icon-btn" type="button" data-bs-toggle="modal" data-bs-target="#paymentModal" aria-label="Doação PIX"><i class="fas fa-qrcode"></i></button>
   </div>
+</footer>
 
-  <!-- Modal Pagamento -->
-  <div class="modal fade" id="paymentModal" tabindex="-1">
-    <div class="modal-dialog">
-      <div class="modal-content text-center p-4">
-        <h5 class="modal-title mb-3">Contribua com a missão</h5>
-        <div class="d-flex justify-content-around">
-          <div>
-            <img src="pix-qrcode.png" alt="PIX" class="img-fluid" style="max-width: 120px">
-            <p><button class="btn btn-vanidoya btn-sm mt-2" id="pix-copy">Copiar PIX</button></p>
-          </div>
-          <div>
-            <img src="lb-qrcode.jpeg" alt="Lightning" class="img-fluid" style="max-width: 120px">
-            <p><button class="btn btn-vanidoya btn-sm mt-2" id="lightning-copy">Copiar Lightning</button></p>
-          </div>
+<!-- SHARE MODAL -->
+<div class="modal fade" id="shareModal" tabindex="-1" aria-labelledby="shareModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content glass p-3">
+      <div class="modal-header border-0">
+        <h5 class="modal-title" id="shareModalLabel">Compartilhar</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body text-center">
+        <p>Copie o link ou use o botão compartilhar do seu aparelho:</p>
+        <div class="input-group">
+          <input id="share-link" type="text" class="form-control text-center" value="https://prontosocorroespiritual.com" readonly>
+          <button id="share-copy" class="btn btn-vanidoya" type="button">Copiar</button>
         </div>
       </div>
     </div>
   </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="scripts.js"></script>
 </div>
-</main>
- 
-<footer class="site-footer">
-<div class="mb-1">
-      <!-- Ícones de redes sociais e ações (cor dos ícones definida no CSS) -->
-      <a href="#" class="icon-btn" onclick="window.open('https://wa.me/5521972280397','_blank')">
-        <i class="fab fa-whatsapp fa-2x"></i>
-      </a>
-      <a href="https://instagram.com/sacerdotisa_vanidoya" target="_blank" class="icon-btn">
-        <i class="fab fa-instagram fa-2x mx-3"></i>
-      </a>
-      <a href="#" data-bs-toggle="modal" data-bs-target="#shareModal" class="icon-btn">
-        <i class="fas fa-share-alt fa-2x"></i>
-      </a>
-      <a href="#" data-bs-toggle="modal" data-bs-target="#forestModal" class="icon-btn">
-        <i class="fas fa-leaf fa-2x ms-3"></i>
-      </a>
-      <a href="#" data-bs-toggle="modal" data-bs-target="#paymentModal" class="icon-btn">
-        <i class="fas fa-qrcode fa-2x ms-3"></i>
-      </a>
+
+<!-- FOREST MEDICINE MODAL -->
+<div class="modal fade" id="forestModal" tabindex="-1" aria-labelledby="forestModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content glass p-3 text-center">
+      <div class="modal-header border-0">
+        <h5 class="modal-title" id="forestModalLabel">Medicinas da Floresta</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Estas medicinas são presentes ancestrais. Descubra se é seu momento de recebê-las:</p>
+        <a href="https://docs.google.com/forms/d/1IMb6Evq2V_CrWg7wYpMwIPyAmJsnxgjtya1p9sT1x4w" target="_blank" class="btn btn-vanidoya">Responder Formulário</a>
+      </div>
     </div>
-  </footer>
+  </div>
+</div>
+
+<!-- PAYMENT MODAL -->
+<div class="modal fade" id="paymentModal" tabindex="-1" aria-labelledby="paymentModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content glass p-3 text-center">
+      <div class="modal-header border-0">
+        <h5 class="modal-title" id="paymentModalLabel">Contribua com a missão</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <img src="pix-qrcode.png" alt="PIX QR" class="img-fluid rounded mb-2" style="max-width:220px;" loading="lazy">
+        <button id="pix-copy" class="btn btn-vanidoya mb-3" type="button">Copiar chave PIX</button>
+        <img src="lb-qrcode.jpeg" alt="Lightning QR" class="img-fluid rounded mb-2" style="max-width:220px;" loading="lazy">
+        <button id="lightning-copy" class="btn btn-vanidoya" type="button">Copiar Lightning</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Scripts -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="scripts.js"></script>
 </body>
 </html>
