--- a/sagrada‑feminina.html
+++ b/sagrada‑feminina.html
@@ -6,11 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sagrada Feminina | Vani D’Oyá</title>
 
-  <!-- Google Fonts & Bootstrap -->
-  <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Uncial+Antiqua&display=swap" rel="stylesheet">
+  <!-- Google Fonts & Bootstrap (mantemos apenas Cinzel para títulos) -->
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="styles.css"><!-- assume folha global do site -->
 
-  <!-- Style tweaks específicos desta página -->
+  <!-- Ajustes visuais específicos -->
   <style>
     :root{
       --rosa-base:#ff8291;
@@ -18,73 +19,71 @@
       --rosa-grad-2:#ff8e9c;
       --rosa-grad-3:#f3a2d3;
       --violeta:#764ba2;
-      --branco:#ffffff;
       --preto:#2b212b;
     }
-    body{
-      background:url('bg-textura-floral.webp') center/cover fixed no-repeat;
-      color:var(--preto);
-      font-family:'Uncial Antiqua',cursive;
-    }
+
+    /* Seção em efeito vidro */
     .glass{
-      background:rgba(255,255,255,0.55);
-      backdrop-filter:blur(8px);
+      background:rgba(255,255,255,0.65);
+      backdrop-filter:blur(10px);
       border-radius:2rem;
-      box-shadow:0 10px 32px rgba(0,0,0,.15);
       padding:3rem 2rem;
+      box-shadow:0 8px 24px rgba(0,0,0,.18);
     }
-    .brand-color{color:var(--violeta);}
+
+    /* Cores de destaque */
+    .brand-color{color:var(--violeta); font-family:'Cinzel Decorative',serif;}
     .gold{color:var(--rosa-base);}
 
-    /* Galeria elegante */
+    /* Galeria */
     .gallery-img{
       aspect-ratio:3/4;
       object-fit:cover;
       border-radius:1.25rem;
-      box-shadow:0 4px 15px rgba(0,0,0,.25);
+      box-shadow:0 3px 14px rgba(0,0,0,.25);
       transition:transform .3s;
     }
-    .gallery-img:hover{transform:scale(1.04);}    
+    .gallery-img:hover{transform:scale(1.03);}   
 
-    /* SimplyBook iframe ajustado */
+    /* SimplyBook iframe para ocupar largura */
     #sb-widget iframe{
       width:100% !important;
-      min-height:620px;
+      min-height:650px;
       border:0;
       border-radius:1rem;
-      box-shadow:0 4px 20px rgba(0,0,0,.25);
+      box-shadow:0 4px 18px rgba(0,0,0,.2);
     }
   </style>
 </head>
 <body>
   <main class="container my-5">
     <section class="glass text-center mx-auto" style="max-width:960px;">
-      <!-- logomarca -->
+      <!-- logomarca principal -->
       <img src="sementes-branco_leve2.png" class="img-fluid mb-4" style="max-width:160px" alt="Símbolo Sementes da Deusa">
 
       <h1 class="brand-color mb-4">Sagrada&nbsp;Feminina&nbsp;🌸</h1>
-      <p class="fs-5">Reconecte-se à força criadora através de rituais, vivências e Magia da Natureza conduzidas por <strong>Mãe Vani D’Oyá</strong>.</p>
+      <p class="lead fw-normal">Reconecte-se à força criadora por meio de rituais, vivências e Magia da Natureza conduzidas por <strong>Mãe Vani D’Oyá</strong>.</p>
 
-      <!-- galeria -->
-      <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center my-4">
+      <!-- Galeria -->
+      <div class="row row-cols-1 row-cols-md-3 g-4 my-4">
         <div class="col">
-          <img src="SF01.jpeg" class="img-fluid gallery-img" alt="Vivência Sagrada Feminina – Foto 1">
+          <img src="SF01.jpeg" class="img-fluid gallery-img" alt="Vivência Sagrada Feminina – Foto 1">
         </div>
         <div class="col">
-          <img src="SF02.jpeg" class="img-fluid gallery-img" alt="Vivência Sagrada Feminina – Foto 2">
+          <img src="SF02.jpeg" class="img-fluid gallery-img" alt="Vivência Sagrada Feminina – Foto 2">
         </div>
         <div class="col">
-          <img src="SF03.jpeg" class="img-fluid gallery-img" alt="Vivência Sagrada Feminina – Foto 3">
+          <img src="SF03.jpeg" class="img-fluid gallery-img" alt="Vivência Sagrada Feminina – Foto 3">
         </div>
       </div>
 
-      <!-- agendamento -->
+      <!-- Agendamento -->
       <div class="my-5">
         <h3 class="gold mb-3">Agende sua experiência</h3>
-        <div id="sb-widget" class="mx-auto" style="max-width:800px;"></div>
+        <div id="sb-widget"></div>
       </div>
 
-      <p class="small">Sessões presenciais – Rio de Janeiro. Para atendimento online, consulte disponibilidade.</p>
+      <p class="small">Sessões presenciais no Rio de Janeiro. Para atendimento online, consulte disponibilidade.</p>
       <a href="index.html" class="btn btn-outline-dark mt-4">← Voltar</a>
     </section>
   </main>
@@ -92,36 +91,10 @@
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- SimplyBook widget -->
+  <!-- SimplyBook widget (código original, sem alterações) -->
   <script src="//widget.simplybook.me/v2/widget/widget.js" type="text/javascript"></script>
   <script type="text/javascript">
-    new SimplybookWidget({
-      widget_type:"iframe",
-      url:"https:\/\/pset.simplybook.me",
-      container:"sb-widget", // garante inserção no div
-      theme:"minimal",
-      theme_settings:{
-        timeline_show_end_time:"1",
-        timeline_modern_display:"as_slots",
-        hide_company_label:"0",
-        timeline_hide_unavailable:"1",
-        hide_past_days:"0",
-        sb_base_color:"var(--rosa-base)",
-        btn_color_1:"var(--rosa-grad-1),var(--rosa-grad-2),var(--rosa-grad-3)",
-        link_color:"var(--rosa-base)",
-        display_item_mode:"block",
-        body_bg_color:"#ffffff",
-        dark_font_color:"var(--preto)",
-        light_font_color:"#ffffff",
-        sb_company_label_color:"var(--rosa-base)",
-        sb_review_image:"",
-        hide_img_mode:"0",
-        sb_busy:"#c7b3b3",
-        sb_available:"var(--preto)"
-      },
-      navigate:"packages",
-      app_config:{clear_session:0,allow_switch_to_ada:0,predefined:[]}
-    });
+    var widget = new SimplybookWidget({"widget_type":"iframe","url":"https:\/\/pset.simplybook.me","theme":"minimal","theme_settings":{"timeline_show_end_time":"1","timeline_modern_display":"as_slots","hide_company_label":"0","timeline_hide_unavailable":"1","hide_past_days":"0","sb_base_color":"#ff8291","btn_color_1":"#ef9da8,#ff8e9c,#f3a2d3","link_color":"#ff8291","display_item_mode":"block","body_bg_color":"#ffffff","sb_review_image":"","dark_font_color":"#2b212b","light_font_color":"#ffffff","sb_company_label_color":"#ff8291","hide_img_mode":"0","sb_busy":"#c7b3b3","sb_available":"#2b212b"},"timeline":null,"datepicker":null,"is_rtl":false,"app_config":{"clear_session":0,"allow_switch_to_ada":0,"predefined":[]},"navigate":"packages"});
   </script>
 </body>
 </html>
