--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <!-- BOTÕES PRINCIPAIS -->
     <div class="d-flex flex-column align-items-center gap-3 py-3">
-      <a href="sagrada‑feminina.html" class="btn btn-vanidoya btn-lg px-5">
+      <a href="sagrada‑feminina.html" class="btn btn-vanidoya btn-service">
   Sagrada Feminina
 </a>
       <a id="btn-tarot"  href="curso-avancado-baralho-cigano.html" class="btn btn-vanidoya btn-service">Curso Avançado<br>Baralho Cigano</a>
