--- a/sagrada‑feminina.html
+++ b/sagrada‑feminina.html
@@ -1,4 +1,4 @@
-<!-- sagrada-feminina.html -->
+<!-- sagrada-feminina.html (scroll para widget) -->
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -6,95 +6,123 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sagrada Feminina | Vani D’Oyá</title>
 
-  <!-- Google Fonts & Bootstrap (mantemos apenas Cinzel para títulos) -->
+  <!-- Google Fonts & Bootstrap -->
   <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="styles.css"><!-- assume folha global do site -->
+  <link rel="stylesheet" href="styles.css">
 
-  <!-- Ajustes visuais específicos -->
   <style>
-    :root{
-      --rosa-base:#ff8291;
-      --rosa-grad-1:#ef9da8;
-      --rosa-grad-2:#ff8e9c;
-      --rosa-grad-3:#f3a2d3;
-      --violeta:#764ba2;
-      --preto:#2b212b;
-    }
-
-    /* Seção em efeito vidro */
-    .glass{
-      background:rgba(255,255,255,0.65);
-      backdrop-filter:blur(10px);
-      border-radius:2rem;
-      padding:3rem 2rem;
-      box-shadow:0 8px 24px rgba(0,0,0,.18);
-    }
-
-    /* Cores de destaque */
-    .brand-color{color:var(--violeta); font-family:'Cinzel Decorative',serif;}
-    .gold{color:var(--rosa-base);}
-
-    /* Galeria */
-    .gallery-img{
-      aspect-ratio:3/4;
-      object-fit:cover;
-      border-radius:1.25rem;
-      box-shadow:0 3px 14px rgba(0,0,0,.25);
-      transition:transform .3s;
-    }
-    .gallery-img:hover{transform:scale(1.03);}   
-
-    /* SimplyBook iframe para ocupar largura */
-    #sb-widget iframe{
-      width:100% !important;
-      min-height:650px;
-      border:0;
-      border-radius:1rem;
-      box-shadow:0 4px 18px rgba(0,0,0,.2);
-    }
+    html{scroll-behavior:smooth;}
+    :root{--rosa-base:#ff8291;--violeta:#764ba2;--preto:#2b212b;}
+    .glass{background:rgba(255,255,255,0.15);backdrop-filter:blur(10px);border-radius:2rem;padding:3rem 2.5rem;box-shadow:0 8px 24px rgba(0,0,0,.18);}  
+    .brand-color{color:#e97cb1;font-family:'Cinzel Decorative',serif;}
+    .gold{color:var(--rosa-base);}  
+    .gallery-img{aspect-ratio:3/4;object-fit:cover;border-radius:1.25rem;box-shadow:0 3px 14px rgba(0,0,0,.22);transition:transform .3s;}
+    .gallery-img:hover{transform:scale(1.03);}  
+    ul.custom li{position:relative;padding-left:1.4rem;margin-bottom:.3rem;}
+    ul.custom li::before{content:"◆";color:var(--rosa-base);position:absolute;left:0;top:0;}
+    /* iframe ajustes */
+    #sb-widget iframe{width:100%!important;min-height:650px;border:0;border-radius:1rem;box-shadow:0 4px 18px rgba(0,0,0,.2);}  
   </style>
 </head>
 <body>
   <main class="container my-5">
-    <section class="glass text-center mx-auto" style="max-width:960px;">
-      <!-- logomarca principal -->
-      <img src="sementes-branco_leve2.png" class="img-fluid mb-4" style="max-width:160px" alt="Símbolo Sementes da Deusa">
-
+    <section class="glass text-center mx-auto" style="max-width:920px;">
+      <!-- topo -->
+      <img src="sementes-branco_leve2.png" class="img-fluid mb-4" style="max-width:150px" alt="Símbolo Sementes da Deusa">
       <h1 class="brand-color mb-4">Sagrada&nbsp;Feminina&nbsp;🌸</h1>
-      <p class="lead fw-normal">Reconecte-se à força criadora por meio de rituais, vivências e Magia da Natureza conduzidas por <strong>Mãe Vani D’Oyá</strong>.</p>
+      <p class="lead">Vivência imersiva conduzida por <strong>Mãe Vani D’Oyá</strong>, celebrando o Universo Feminino em segurança, afeto e sororidade.</p>
+
+      <!-- Botão CTA único -->
+      <a href="#" id="scroll-reserve" class="btn btn-vanidoya btn-lg my-4 px-5">Reserve seu lugar</a>
 
       <!-- Galeria -->
-      <div class="row row-cols-1 row-cols-md-3 g-4 my-4">
-        <div class="col">
-          <img src="SF01.jpeg" class="img-fluid gallery-img" alt="Vivência Sagrada Feminina – Foto 1">
-        </div>
-        <div class="col">
-          <img src="SF02.jpeg" class="img-fluid gallery-img" alt="Vivência Sagrada Feminina – Foto 2">
-        </div>
-        <div class="col">
-          <img src="SF03.jpeg" class="img-fluid gallery-img" alt="Vivência Sagrada Feminina – Foto 3">
-        </div>
+      <div class="row g-4 my-4">
+        <div class="col-md-4"><img src="SF01.jpeg" class="img-fluid gallery-img" alt="Vivência 1"></div>
+        <div class="col-md-4"><img src="SF02.jpeg" class="img-fluid gallery-img" alt="Vivência 2"></div>
+        <div class="col-md-4"><img src="SF03.jpeg" class="img-fluid gallery-img" alt="Vivência 3"></div>
       </div>
 
-      <!-- Agendamento -->
-      <div class="my-5">
-        <h3 class="gold mb-3">Agende sua experiência</h3>
-        <div id="sb-widget"></div>
+      <!-- Conteúdo explicativo -->
+      <div class="text-start fs-6">
+        <p><strong>Objetivo</strong> — criar um espaço seguro e fraterno <em>(sem rivalidade ou desconfiança)</em> para partilharmos temas do Universo Feminino e Matrifocal.</p>
+        <p class="mb-1"><strong>Salve a Lua que representa a Mãe de Deus!</strong></p>
+        <p class="fst-italic">Vista roupas leves e claras; evite peças apertadas que impeçam o fluxo de energia.</p>
+
+        <h5 class="gold mt-4">Materiais individuais</h5>
+        <ul class="custom">
+          <li>Tapete ou colchonete</li>
+          <li>Cadeira dobrável (opcional)</li>
+          <li>Roupa de banho &amp; toalha</li>
+          <li>Agasalho</li>
+          <li>Repelente</li>
+          <li>Garrafa de água</li>
+          <li>Itens extras para conforto</li>
+        </ul>
+
+        <h5 class="gold mt-4">Para o trabalho magístico</h5>
+        <ul class="custom">
+          <li>2 velas brancas com suporte</li>
+          <li>Espelho ritual</li>
+          <li>Caderno e grafite/caneta</li>
+        </ul>
+
+        <h5 class="gold mt-4">Ceia colaborativa</h5>
+        <p>Traga <em>alimentos vegetarianos</em> prontos (pastas, pães, frutas, castanhas, sucos, bolos, tortas, chás) para celebrarmos juntas.</p>
+
+        <h5 class="gold mt-4">Medicina Ayahuasca (opcional)</h5>
+        <p>Faça jejum de <strong>3 dias</strong> (sem carne, álcool, sexo promíscuo e substâncias tóxicas) antes da cerimônia. Informe‑nos na <em>Anamnese Prévia</em> sobre medicamentos em uso.</p>
+
+        <p class="mt-3">✨ Para dúvidas, fale conosco.</p>
       </div>
 
-      <p class="small">Sessões presenciais no Rio de Janeiro. Para atendimento online, consulte disponibilidade.</p>
-      <a href="index.html" class="btn btn-outline-dark mt-4">← Voltar</a>
+      <!-- Widget SimplyBook -->
+      <h3 class="gold mt-5 mb-3">Escolha seu horário</h3>
+      <div id="sb-widget" class="mb-5"></div>
+
+      <p class="small mt-4">Encontros presenciais no Rio de Janeiro. Para vivências online, consulte disponibilidade.</p>
+      <a href="index.html" class="btn btn-outline-dark mt-3">← Voltar</a>
     </section>
   </main>
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-  <!-- SimplyBook widget (código original, sem alterações) -->
-  <script src="//widget.simplybook.me/v2/widget/widget.js" type="text/javascript"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
+  <!-- SimplyBook widget script -->
+  <script src="https://widget.simplybook.me/v2/widget/widget.js" type="text/javascript"></script>
   <script type="text/javascript">
-    var widget = new SimplybookWidget({"widget_type":"iframe","url":"https:\/\/pset.simplybook.me","theme":"minimal","theme_settings":{"timeline_show_end_time":"1","timeline_modern_display":"as_slots","hide_company_label":"0","timeline_hide_unavailable":"1","hide_past_days":"0","sb_base_color":"#ff8291","btn_color_1":"#ef9da8,#ff8e9c,#f3a2d3","link_color":"#ff8291","display_item_mode":"block","body_bg_color":"#ffffff","sb_review_image":"","dark_font_color":"#2b212b","light_font_color":"#ffffff","sb_company_label_color":"#ff8291","hide_img_mode":"0","sb_busy":"#c7b3b3","sb_available":"#2b212b"},"timeline":null,"datepicker":null,"is_rtl":false,"app_config":{"clear_session":0,"allow_switch_to_ada":0,"predefined":[]},"navigate":"packages"});
+    new SimplybookWidget({
+      widget_type:"iframe",
+      url:"https://pset.simplybook.me",
+      container:"sb-widget",
+      theme:"minimal",
+      theme_settings:{
+        timeline_show_end_time:"1",
+        timeline_modern_display:"as_slots",
+        hide_company_label:"0",
+        timeline_hide_unavailable:"1",
+        hide_past_days:"0",
+        sb_base_color:"#861657",
+        btn_color_1:"#ecb4bf,#ecb4bf,#ecb4bf",
+        link_color:"#861657",
+        display_item_mode:"block",
+        body_bg_color:"#f8f7fa",
+        sb_review_image:"",
+        dark_font_color:"#333333",
+        light_font_color:"#ffffff",
+        sb_company_label_color:"#38182b",
+        hide_img_mode:"1",
+        sb_busy:"#c7b3b3",
+        sb_available:"#333333"
+      },
+      timeline:"modern",
+      datepicker:"top_calendar",
+      is_rtl:false,
+      app_config:{clear_session:0,allow_switch_to_ada:0,predefined:{service:"11",category:"1"}}
+    });
+    // scroll até o fim da página ao clicar no botão Reserve
+    document.getElementById('scroll-reserve').addEventListener('click',function(e){
+      e.preventDefault();
+      window.scrollTo({top:document.body.scrollHeight, behavior:'smooth'});
+    });
   </script>
 </body>
 </html>
